<resources>
    <string name="app_name">Event Horizon</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="main_backdrop_title">EVENT HORIZON</string>
    <string name="main_backdrop_subtitle">Share events with colleagues</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_gallery">GalleryActivity</string>

    <string name="login_title">Log in to your account</string>
    <string name="loginBtn_text">Log in</string>
    <string name="logoutBtn_text">Log out</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="signupBtn_text">Create account</string>

    <string name="auth_failed">Authentication failed</string>
    <string name="user_creation_failed">Account creation failed. Please try again.</string>
    <string name="pw_check_failed">Retype your password</string>

    <string name="name_title">Enter your name:</string>
    <string name="name_text">Name</string>
    <string name="email_title">Enter your email address:</string>
    <string name="passwd_title">Enter password:</string>
    <string name="passwd_retype_title">Confirm password:</string>
    <string name="registerBtn_text">Register</string>

    <string name="group_info_title">Event information</string>
    <string name="group_name_title">Name:</string>
    <string name="group_expiration_title">Expiration:</string>
    <string name="group_members_title">Members:</string>
    <string name="inviteBtn_text">Invite members</string>
    <string name="leaveBtn_text">Leave event</string>
    <string name="deleteBtn_text">Delete event</string>

    <string name="noGroup_text">You are currently not a member of any event group. Please select Join or Create to participate in this new and joyous activity</string>
    <string name="joinBtn_text">Join an Event</string>
    <string name="createBtn_text">Create a New Event</string>
    <string name="delete_dialog">Are you sure you want to delete the event?</string>
    <string name="leave_dialog">Are you sure you want to leave the event?</string>

    <string name="create_group_title">NEW EVENT</string>
    <string name="ng_name_title">Event name:</string>
    <string name="ng_expiration_title">Expiration date:</string>
    <string name="ng_expirationTime_title">Expiration time:</string>
    <string name="ng_name_hint">Enter event name</string>
    <string name="ng_createBtn_text">Create event</string>
    <string name="ng_groupName_missing">Please enter name for the event</string>
    <string name="ng_expireDate_missing">Please enter expiration date for the event</string>
    <string name="ng_expireTime_missing">Please enter expiration time for the event</string>
    <string name="ng_creation_success">Event created successfully!</string>

    <string name="welcome_title">Welcome to use Event Horizon!</string>
    <string name="welcome_text1">You seem to be new here</string>
    <string name="welcome_text2">Before you can begin sharing your event photos, we need to hook you up with an event, obviously</string>
    <string name="get_startedBtn">Get started</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>


    <!-- Settings for Data & Sync -->
    <string name="pref_header_data_sync">Data Syncronization Quality </string>

    <string name="pref_title_sync_quality_lan">Image Quality over WiFi-network</string>
    <string-array name="pref_sync_quality_lan_titles">
        <item>Low (640x480)</item>
        <item>High(1280x960)</item>
        <item>Max (original size)</item>
    </string-array>
    <string-array name="pref_sync_quality_lan_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="pref_title_sync_quality_wan">Image Quality over Mobile-network</string>
    <string-array name="pref_sync_quality_wan_titles">
        <item>Low (640x480)</item>
        <item>High(1280x960)</item>
        <item>Max (original size)</item>
    </string-array>
    <string-array name="pref_sync_quality_wan_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>


</resources>
