<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fi.aalto.mcc.mcc.activity.GroupManagementActivity">

    <ProgressBar
        android:id="@+id/progressBar1"
        android:elevation="2dp"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/group_yes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/groupMembers_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="289dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="8dp"
            android:text="@string/group_members_title"
            android:textColor="@color/indigo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/groupExpiration_title" />

        <TextView
            android:id="@+id/groupName_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/group_name_title"
            android:textColor="@color/indigo"
            app:layout_constraintEnd_toEndOf="@+id/groupExpiration_title"
            app:layout_constraintTop_toBottomOf="@+id/groupInfo" />

        <TextView
            android:id="@+id/groupExpiration_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/group_expiration_title"
            android:textColor="@color/indigo"
            app:layout_constraintEnd_toEndOf="@+id/groupMembers_title"
            app:layout_constraintTop_toBottomOf="@+id/groupName_title" />

        <ListView
            android:id="@+id/membersList"
            android:layout_width="233dp"
            android:layout_height="187dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/groupMembers_title"
            app:layout_constraintTop_toTopOf="@+id/groupMembers_title" />

        <TextView
            android:id="@+id/groupInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="162dp"
            android:layout_marginStart="162dp"
            android:layout_marginTop="32dp"
            android:text="@string/group_info_title"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/groupName_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/groupName_title"
            app:layout_constraintStart_toEndOf="@+id/groupName_title"
            app:layout_constraintTop_toTopOf="@+id/groupName_title"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/groupExpiration_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/groupExpiration_title"
            app:layout_constraintStart_toEndOf="@+id/groupExpiration_title"
            app:layout_constraintTop_toTopOf="@+id/groupExpiration_title"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/inviteBtn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/indigo"
            android:lineSpacingExtra="8sp"
            android:text="@string/inviteBtn_text"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/deleteBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/deleteBtn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:backgroundTint="@android:color/holo_red_dark"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/leaveBtn_text"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/group_no"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <Button
            android:id="@+id/joinBtn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/joinBtn_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/noGroup_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/createBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/createBtn_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/joinBtn" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
