<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/loginPage"
    tools:context="fi.aalto.mcc.mcc.activity.LoginActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/colorPrimary"
        android:text=""
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:ems="10"

        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/black"
        android:textSize="16dp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/passwdInput"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/passwdInput"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:textSize="16dp"
        android:textStyle="normal"
        android:textColor="@android:color/black"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/loginBtn" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/loginBtn_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OR"
        app:layout_constraintRight_toRightOf="@+id/loginBtn"
        app:layout_constraintLeft_toLeftOf="@+id/loginBtn"
        app:layout_constraintHorizontal_bias="0.507"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/signupBtn" />

    <Button
        android:id="@+id/signupBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="60dp"
        android:text="@string/signupBtn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar1"
        android:elevation="2dp"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




</android.support.constraint.ConstraintLayout>
