<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/registerPage"
    tools:context="fi.aalto.mcc.mcc.activity.RegisterActivity">


    <ProgressBar
        android:id="@+id/progressBar1"
        android:elevation="2dp"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email address"
        android:textColor="@android:color/darker_gray"
        android:textSize="10dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/reg_emailInput"
        app:layout_constraintStart_toStartOf="@+id/reg_emailInput" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:textSize="16dp"
        android:textStyle="normal"
        android:textColor="@android:color/black"
        android:ems="10"
        android:hint="@string/name_text"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="0.209"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:text="Password"
        android:textColor="@android:color/darker_gray"
        android:textSize="10dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/reg_passwdInput"
        app:layout_constraintStart_toStartOf="@+id/reg_passwdInput" />

    <EditText
        android:id="@+id/reg_emailInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:textSize="16dp"
        android:textStyle="normal"
        android:textColor="@android:color/black"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/nameInput"
        tools:layout_editor_absoluteX="32dp" />

    <EditText
        android:id="@+id/reg_passwdInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:textSize="16dp"
        android:textStyle="normal"
        android:textColor="@android:color/black"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/reg_emailInput"
        tools:layout_editor_absoluteX="32dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:text="Confirm password"
        android:textColor="@android:color/darker_gray"
        android:textSize="10dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/reg_passwdConfirmInput"
        app:layout_constraintStart_toStartOf="@+id/reg_passwdConfirmInput" />

    <EditText
        android:id="@+id/reg_passwdConfirmInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:textSize="16dp"
        android:textStyle="normal"
        android:textColor="@android:color/black"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/reg_passwdInput"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:text="@string/registerBtn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="User screen name"
        android:textColor="@android:color/darker_gray"
        android:textSize="10dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/nameInput"
        app:layout_constraintStart_toStartOf="@+id/nameInput" />
</android.support.constraint.ConstraintLayout>
